--- a/platforms/ios/www/users/views/forgot-password.client.view.html
+++ b/platforms/ios/www/users/views/forgot-password.client.view.html
@@ -1,17 +1,21 @@
-<section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Tap your email</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+<section class="" data-ng-controller="AuthenticationController">
+
+
+	<div class="col-md-12 text-center">
+		<div class='login-logo login-main-width'>
+			<img src="./core/img/logo.gif"></img>
+		</div>
 		<form data-ng-submit="forgotPassword()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
-				<div class="form-group">
-					<label for="currentPassword">Email</label>
-					<input type="email" name="email" class="form-control" data-ng-model="forgot.email" placeholder="Email">
+				<div class='login-input login-main-width'>
+					<input type='email' name="email" placeholder='Email' data-ng-model="forgot.email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" ></input>
 				</div>
-				<strong data-ng-bind="error"></strong>
-				<div class="form-group">
+				<div class='forgot-buttons login-main-width row'>
 					<button type="submit" class="btn btn-default col-md-12">Submit</button>
 				</div>
 			</fieldset>
 		</form>
 	</div>
+
+
 </section>
