--- a/www/core/views/home.client.view.html
+++ b/www/core/views/home.client.view.html
@@ -1,39 +1,10 @@
 <section data-ng-controller="HomeController">
-	<div class="col-md-12 text-center">
-		<div class="row"> 
-			<h2>Welcome To</h2>
-		</div>
-<!-- 		<div class="row">
-			<h1>Apology.fm</h1>
-		</div>
-		<div class="row">
-			<h2>
-				We want to promote sensational 
-				apology minus the fear. This is 
-				an app to give and listen to 
-				apology
-			</h2>
-			<div>		
-				<div class="alert alert-warning text-center" data-ng-if="apology.$resolved && !apology.length">
-					No articles yet, why don't you <a href="#!/apology/create">create one</a>?
-				</div>
-			</div>
-		</div> -->
-		<p>
-			<button ng-click="captureAudio()" class="btn btn-primary">CLICK ME!</button>
-			<button ng-click="stopRecording()" class="btn btn-primary">STOP ME!</button>			
-		</p>
+	<div class='landing-page' landing-page>
+		<img src="./core/img/landing.gif"></img>
+		<div class='landing-begin' ng-click='letTheGameBegin()'>BEGIN -></div>
+	</div>
 
-		<p ng-repeat='file in mediaFiles'>
-			{{ $index+1 }}. {{ file }}
-			<button ng-click="playMedia(file)" class="btn btn-primary">PLAY ME!</button>
-			<button ng-click="pauseMedia()" class="btn btn-primary">Pause ME!</button>
-			<button ng-click="stopMedia()" class="btn btn-primary">Stop ME!</button>
-		</p>
-
-		<p>
-		</p>
-
-
+	<div class='main-window'>
+		
 	</div>
 </section>
