--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -10,6 +10,9 @@
     <feature name="Sms">
         <param name="android-package" value="org.apache.cordova.plugin.sms.Sms" />
     </feature>
+    <feature name="ContactChooser">
+        <param name="android-package" value="com.monday.cordova.ContactChooserPlugin" />
+    </feature>
     <name>Apology.fm</name>
     <description>
         We want you to send apology!
