--- a/www/core/views/reviewapology.client.view.html
+++ b/www/core/views/reviewapology.client.view.html
@@ -28,6 +28,6 @@
 			</div>
 		</div>
 
-		<button ng-click='chooseRecipient()'>Choose recipient</button>
+		<button ng-click="chooseRecipient()">Choose recipient</button>
 	</div>
 </section>
