--- a/platforms/android/assets/www/core/views/apolooutbox.client.view.html
+++ b/platforms/android/assets/www/core/views/apolooutbox.client.view.html
@@ -3,7 +3,7 @@
         <div><center><h4>RECEIVED APOLOGIES</h4></center></div>
         <div class="row" style="padding-top: 30px;margin-right: 0px;margin-left: 0px;padding-bottom: 30px;">
             <div style="padding: 0px;margin: 0px;padding-left: 30px;" class="col-xs-6">
-                <div ng-click='goTo("apoloinbox")' style="padding: 10px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: white;color: #A7B9C2;">
+                <div ng-click='goTo("/apoloinbox")' style="padding: 10px;padding-left:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-left-radius: 25px;border-top-left-radius: 25px;width: 100%;background-color: white;color: #A7B9C2;">
                     INBOX
                 </div>
             </div>
@@ -28,7 +28,7 @@
               </div>
             </div>
         </div>
-        <div class='apology-footer' ng-click='radio.goTo("/signin")'>
+        <div class='apology-footer' ng-click='goTo("/signin")'>
             RECORD AN APOLOGY
         </div>
     </div>        
