--- a/www/core/views/apoloinbox.client.view.html
+++ b/www/core/views/apoloinbox.client.view.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div style="padding: 0px;margin: 0px;padding-right: 30px;" class="col-xs-6">
-                <div ng-click='goTo("apolooutbox")' style="padding: 10px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: white;color: #A7B9C2;text-align: right;">
+                <div ng-click='goTo("/apolooutbox")' style="padding: 10px;padding-right:20px;border-color: white;border-width: 1px;border-style: solid;border-bottom-right-radius: 25px;border-top-right-radius: 25px;width: 100%;background-color: white;color: #A7B9C2;text-align: right;">
                     OUTBOX
                 </div>
             </div>
@@ -28,7 +28,7 @@
               </div>
             </div>
         </div>
-        <div class='apology-footer' ng-click='radio.goTo("/signin")'>
+        <div class='apology-footer' ng-click='goTo("/signin")'>
             RECORD AN APOLOGY
         </div>
     </div>        
