--- a/www/core/views/radio.client.view.html
+++ b/www/core/views/radio.client.view.html
@@ -5,9 +5,9 @@
             <center><img src="./core/img/Apology.gif" width="200px" /></center>
         </div>
         
-        <p class='main-page-text' ng-click="radio.start()">LISTEN TO A<br/>RECENT APOLOGY</p>
+        <p class='main-page-text'>LISTEN TO A<br/>RECENT APOLOGY</p>
         
-        <p class='main-page-subtext' >RECORDED</p>
+        <!--<p class='main-page-subtext' >RECORDED</p>-->
 
         <p class='main-page-subtext'>{{ radio.currentApology.created | date:'medium' }}</p>
         
