--- a/platforms/android/assets/www/core/views/aftersent.client.view.html
+++ b/platforms/android/assets/www/core/views/aftersent.client.view.html
@@ -1,8 +1,11 @@
 <section data-ng-controller="AfterSentController">
-	<!-- <div class='main-window'> -->
+	 <div class='main-window'>
 		<p class='apology-header'>apology sent!</p>
 
-		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;">Record another apology</div>
-        <div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;">home</div>
-		
+		<div ng-click="goTo('/signin')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;margin-top: 30px;">Record another apology</div>
+        <div ng-click="goTo('/radio')" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;margin-top: 30px;">home</div>
+		<div class='apology-footer'>
+            SHARE APP
+        </div>
+     </div>
 </section>
