--- a/www/core/views/radio.client.view.html
+++ b/www/core/views/radio.client.view.html
@@ -2,14 +2,14 @@
     <div class='main-window'>
         
         <div style="padding-top: 50px;padding-bottom: 35px;">
-            <center><img src="./core/img/Apology.gif" width="200px" /></center>
+            <img src="./core/img/Apology.gif" width="200px" />
         </div>
         
         <p class='main-page-text'>LISTEN TO A<br/>RECENT APOLOGY</p>
         
         <!--<p class='main-page-subtext' >RECORDED</p>-->
 
-        <p class='main-page-subtext'>{{ radio.currentApology.created | date:'medium' }}</p>
+        <p class='main-page-subtext'>RECORDED<br/>{{ radio.currentApology.created | date:'medium' }}</p>
         
         <!--<div class='apology-prbar'>
         {{ radio.timePlayed | number:0 }}
