--- a/www/core/views/reviewapology.client.view.html
+++ b/www/core/views/reviewapology.client.view.html
@@ -4,7 +4,7 @@
 		<p class='apology-header'>review your apology</p>
 		<div class='goback-to-record' ng-click="goBackToHome()"><</div>
 
-		<p class='main-page-text'>You apology has been recorded. Does it sounds good?</p>
+		<p class='main-page-text' style="padding-left: 50px;padding-right: 50px;">You apology has been recorded. Does it sounds good?</p>
 
 		<div class='apology-prbar'>
 			<div class='prbar' style='width:{{ prBarWidth }}%'></div>
@@ -29,7 +29,7 @@
 		</div>
 		<center>
         <p style="margin-bottom: 30px;">
-          If you like it,choose personal<br/>contacts to share with.  
+          If you like it, choose personal<br/>contacts to share with.  
         </p>
         </center>    
 		<div ng-click="chooseRecipient()" style="margin: auto;border-color: white;border-width: 1px;border-style: solid;border-radius: 25px;text-align: center;padding: 10px;max-width: 200px;">Choose recipient</div>
